--- a/kapil.html
+++ b/kapil.html
@@ -4,3 +4,10 @@
   </h1>
 </center>
 <hr>
+<p>
+  vijay kapil is a software engineer with a passion for developing innovative solutions that enhance user experience. With expertise in full-stack development, he has contributed to various projects that leverage the latest technologies to solve real-world problems. Kapil is committed to continuous learning and staying updated with industry trends.
+  In his free time, he enjoys exploring new programming languages and frameworks, as well as contributing
+  to open-source projects. His goal is to create impactful software that makes a difference in people's lives.
+  Kapil believes in the power of collaboration and is always eager to work with others to bring ideas to life.
+  He is also an advocate for clean code practices and emphasizes the importance of writing maintainable and scalable software.
+</p>
